Enhance tooltip and vocab functionality; support highlight mode and update settings

--- a/popup.html
+++ b/popup.html
@@ -27,6 +27,11 @@
     <button id="addButton">Add</button>
     <h3>Your Vocab List</h3>
     <ul id="vocabList"></ul>
+    <h3>Settings</h3>
+    <select id="modeSelect">
+      <option value="replace">Replace Words</option>
+      <option value="highlight">Highlight Only</option>
+    </select>
     <script src="popup.js"></script>
   </body>
 </html>
