Add export and import functionality for vocab list; enhance user data management

--- a/popup.html
+++ b/popup.html
@@ -43,6 +43,16 @@
       ></textarea
       ><br />
       <button id="saveBlacklist">Save Blacklist</button>
+      <div style="margin-top: 10px">
+        <button id="exportButton">Export Vocab</button>
+        <button id="importButton">Import Vocab</button>
+        <input
+          type="file"
+          id="importFile"
+          style="display: none"
+          accept=".json"
+        />
+      </div>
     </div>
     <script src="popup.js"></script>
   </body>
