--- a/popup.html
+++ b/popup.html
@@ -12,12 +12,38 @@
         width: 200px;
         margin-right: 10px;
       }
+      #searchInput {
+        width: 100%;
+        margin-bottom: 10px;
+      }
+      #vocabListContainer {
+        max-height: 200px; /* Fixed height for scrolling */
+        overflow-y: auto; /* Enable vertical scrolling */
+        border: 1px solid #ddd; /* Optional border for visual separation */
+        padding: 5px;
+      }
       ul {
         list-style: none;
         padding: 0;
+        margin: 0;
       }
       li {
         margin: 5px 0;
+        cursor: pointer; /* Indicate clickable */
+      }
+      li:hover {
+        background-color: #f0f0f0; /* Hover effect */
+      }
+      .synonyms {
+        display: none; /* Hidden by default */
+        padding: 5px;
+        background-color: #f9f9f9;
+        border-top: 1px solid #ddd;
+        font-size: 0.9em;
+      }
+      .synonyms ul {
+        margin: 0;
+        padding-left: 15px;
       }
     </style>
   </head>
@@ -25,8 +51,13 @@
     <h2>Add a Word</h2>
     <input type="text" id="wordInput" placeholder="Enter a word" />
     <button id="addButton">Add</button>
+
     <h3>Your Vocab List</h3>
-    <ul id="vocabList"></ul>
+    <input type="text" id="searchInput" placeholder="Search words..." />
+    <div id="vocabListContainer">
+      <ul id="vocabList"></ul>
+    </div>
+
     <h3>Settings</h3>
     <select id="modeSelect">
       <option value="replace">Replace Words</option>
