Enhance popup and tooltip functionality; add part of speech and audio playback features for vocabulary words.

--- a/public/popup.html
+++ b/public/popup.html
@@ -118,7 +118,12 @@
     <div id="synonymsSection">
       <span id="closeSynonyms">X</span>
       <h4 id="selectedWord"></h4>
+      - <span id="wordPos"></span>
       <p><strong>Definition:</strong> <span id="wordDefinition"></span></p>
+
+      <button id="playWordAudio" style="margin-bottom: 8px; display: none">
+        Play Audio
+      </button>
       <p><strong>Synonyms:</strong></p>
       <ul id="synonymsList"></ul>
     </div>
